# autoware_lanelet2_to_opendrive

./: .dockerignore  .gitignore  .lycheeignore  .pre-commit-config.yaml  ANALYSIS_ISSUE_130.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  latest  lychee.toml  mkdocs.yml  pyproject.toml  test_permission.txt  versions.json
.claude/: settings.json
autoware_carla_scenario/: .env.example  README.md  mkdocs.yml  pyproject.toml
autoware_carla_scenario/docs/: api.md  architecture.md  development.md  index.md  installation.md  tutorial.md  usage.md
autoware_carla_scenario/src/autoware_carla_scenario/: __init__.py  camera_recorder.py  carla_autoware_scenario.py  conditions.py  constants.py  ego.py  entity_role.py  pytest_fixtures.py  recording.py  scenario_base.py  scenario_queue.py  scenario_runner.py  server.py  tick_snapshot.py
autoware_carla_scenario/src/autoware_carla_scenario/actions/: __init__.py  attach_camera_sensor.py  attach_carla_camera_sensor.py  attach_imu_sensor.py  base.py  engage.py  lane_change.py  traffic_signal.py  turn.py
autoware_carla_scenario/src/autoware_carla_scenario/conditions/: __init__.py  actor_existence.py  always_true.py  and_condition.py  autoware_state.py  base.py  collision.py  comparison.py  composite.py  elapsed_time.py  entity_existence.py  entity_in_area.py  entity_lane_position.py  not_condition.py  or_condition.py  persistent.py  speed.py  standstill.py  sticky.py  timeout.py  traffic_signal.py
autoware_carla_scenario/src/autoware_carla_scenario/coordinate/: __init__.py  frames.py  map_manager.py  poses.py  road_lanelet_mapping.py  snap.py  stop_line.py  transform.py
autoware_carla_scenario/src/autoware_carla_scenario/dds/: __init__.py  msg.py  qos.py
autoware_carla_scenario/src/autoware_carla_scenario/entity/: __init__.py  _spawn.py  autoware_dds_bridge.py  autoware_entity.py  ego.py  vehicle_entity.py
autoware_carla_scenario/src/autoware_carla_scenario/examples/: __init__.py  configs.py  intersection_passing.py  lane_change.py  left_turn.py  run.py  spawn_and_idle.py  temporary_stop.py  traffic_light_compliance.py
autoware_carla_scenario/src/autoware_carla_scenario/kinematics/: __init__.py  acceleration.py  frames.py  vector.py  velocity.py
autoware_carla_scenario/src/autoware_carla_scenario/sensor/: __init__.py  base.py  carla_camera.py
autoware_carla_scenario/src/autoware_carla_scenario/sweeper/: __init__.py  bindings.py  constraints.py  lanelet_constraint_sweeper.py  map_loader.py
autoware_carla_scenario/src/autoware_carla_scenario/tools/: detect_no_3d_model_lanelets.py
autoware_carla_scenario/src/autoware_carla_scenario/ui/: __init__.py  app.py  models.py  runner.py  scanner.py  sweep_resolver.py
autoware_carla_scenario/src/autoware_carla_scenario/utils/: __init__.py  stop_line.py  traffic_light.py
autoware_carla_scenario/src/hydra_plugins/autoware_scenario_sweeper/: config.py  sweeper.py
autoware_carla_scenario/test/: conftest.py
autoware_carla_scenario/test/carla_scenario/: conftest.py  test_composition_conditions.py  test_conditions.py  test_coordinate.py  test_dotenv.py  test_entity_role.py  test_examples.py  test_kinematics.py  test_road_lanelet_mapping.py  test_scenario_base.py  test_scenario_queue.py  test_scenario_registry.py  test_server.py  test_stop_line.py  test_traffic_light_utils.py  test_traffic_signal_action.py  test_traffic_signal_condition.py
autoware_lanelet2_to_opendrive/: README.md  mkdocs.ci.yml  mkdocs.yml  pyproject.toml
autoware_lanelet2_to_opendrive/docs/: api.md  carla_opendrive_lanelet2_mapping.md  conversion-process.md  development.md  index.md  installation.md  signals.md  stop_line_objects.md  usage.md
autoware_lanelet2_to_opendrive/docs/limitations/: asam-schema-compliance.md  coordinate-system.md  geometric-approximation.md  index.md  lane-width.md  priority-right-of-way.md  special-signals.md  stop-line-position.md
autoware_lanelet2_to_opendrive/src/autoware_lanelet2_to_opendrive/: __init__.py  analyze_xodr.py  border_fit.py  carla_import_test.py  centerline.py  config.py  conversion_config.py  direct_junction_completion.py  divergence.py  geometry.py  main.py  map_resolver.py  preprocess_lanelet.py  projection.py  qc_validate.py  road_lanelet_geo_mapping.py  scenario_utils.py  spline.py  types.py  util.py
autoware_lanelet2_to_opendrive/test/: conftest.py  test_analyze_xodr.py  test_arc_spiral_emission.py  test_border_fit.py  test_boundary_velocity_vectors.py  test_cartesian_to_frenet.py  test_connecting_road_lane_continuity.py  test_connecting_road_links.py  test_divergence.py  test_find_closest_s.py  test_from_spline_window.py  test_geometry.py  test_geometry_classifier.py  test_header_bounds.py  test_integration_traffic_rule.py  test_junction.py  test_junction_endpoint_fidelity.py  test_junction_lane_links.py  test_junction_lanelink_completeness.py  test_junction_priority.py  test_lane_access.py  test_lane_border.py  test_lane_border_integration.py  test_lane_id_invariants.py  test_lane_links.py  test_lane_speed_sections.py  test_lane_subtype_mapping.py  test_lane_t_helpers.py  test_main.py  test_map_resolver.py  test_objects_stop_line.py  test_opendrive_lane_section.py  test_opendrive_road.py  test_outgoing_junction_links.py  test_param_poly3.py  test_parking_lot.py  test_parking_lot_config.py  test_qc_validate.py  test_remove_lanelet.py  test_road.py  (+17 more)
autoware_lanelet2_to_opendrive/test/data/: .gitignore  parking_lot_mini.osm  speed_change_mini.osm  walkway_mini.osm
lanelet2_to_fbx/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
lanelet2_to_fbx/scripts/: docker_build.sh  docker_export.sh
lanelet2_to_fbx/src/ll2tofbx/: __init__.py  blender_obj_to_fbx.py  cli.py  config.py  geometry.py  godot_extract.py  lanelet_loader.py  layer_names.py  mesh_types.py  obj_writer.py  osm_index.py  solid_builder.py  triangulation.py  validate.py
lanelet2_to_fbx/tests/: test_feature_extraction.py  test_geometry.py  test_integration_optional.py  test_layer_names.py  test_origin_and_validation.py  test_solids.py  test_triangulation.py
(+4177 files in other folders)
