[project]
name = "autoware-lanelet2-to-opendrive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Masaya Kataoka", email = "ms.kataoka@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "lanelet2>=1.2.2",
    "lanelet2-python-api-for-autoware",
    "splines>=0.3.3",
    "scipy>=1.9.0",
    "scenariogeneration>=0.16.3",
    "lxml>=6.0.2",
    "mgrs>=1.5.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
lanelet2-python-api-for-autoware = { git = "https://github.com/tier4/lanelet2_python_api_for_autoware", rev = "7745347645fd04aa8e4230cfa8793e253aad6753" }

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
convert = "autoware_lanelet2_to_opendrive.main:main"

[dependency-groups]
dev = [
    "black>=25.11.0",
    "lark>=1.3.1",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
]
