[project]
name = "autoware-lanelet2-to-opendrive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Masaya Kataoka", email = "ms.kataoka@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "lanelet2>=1.2.2",
    "lanelet2-python-api-for-autoware",
    "scipy>=1.9.0",
    "lxml>=6.0.2",
    "mgrs>=1.5.0",
    "tqdm>=4.67.1",
    "pyyaml>=6.0.0",
    "hydra-core>=1.3.2",
]

[tool.uv.sources]
lanelet2-python-api-for-autoware = { git = "https://github.com/tier4/lanelet2_python_api_for_autoware", rev = "7745347645fd04aa8e4230cfa8793e253aad6753" }

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
convert = "autoware_lanelet2_to_opendrive.main:main"
preprocess-lanelet = "autoware_lanelet2_to_opendrive.preprocess_lanelet:main"
validate-opendrive = "autoware_lanelet2_to_opendrive.validation.validate_opendrive:main"
diagnose-lane-links = "autoware_lanelet2_to_opendrive.validation.diagnose_lane_links:main"
debug-lht-links = "autoware_lanelet2_to_opendrive.validation.debug_lht_links:debug_road_0_lane_links"

[dependency-groups]
dev = [
    "black>=25.11.0",
    "lark>=1.3.1",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-testmon>=2.2.0",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
addopts = "--testmon"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
