[project]
name = "autoware-lanelet2-to-opendrive"
version = "1.13.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Masaya Kataoka", email = "ms.kataoka@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "lanelet2>=1.2.2",
    "lanelet2-python-api-for-autoware",
    "scipy>=1.9.0",
    "lxml>=5.2.2",
    "mgrs>=1.5.0",
    "tqdm>=4.67.1",
    "pyyaml>=6.0.0",
    "hydra-core>=1.3.2",
    "asam-qc-opendrive>=1.0.0",
    "carla>=0.9.16",
]

[tool.uv.sources]
lanelet2-python-api-for-autoware = { git = "https://github.com/tier4/lanelet2_python_api_for_autoware", rev = "7745347645fd04aa8e4230cfa8793e253aad6753" }

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
convert = "autoware_lanelet2_to_opendrive.main:main"
preprocess-lanelet = "autoware_lanelet2_to_opendrive.preprocess_lanelet:main"
analyze = "autoware_lanelet2_to_opendrive.analyze_xodr:main"
carla-import-test = "autoware_lanelet2_to_opendrive.carla_import_test:main"

[dependency-groups]
dev = [
    "black>=25.11.0",
    "lark>=1.3.1",
    "mike>=2.1.3",
    "mkdocs>=1.6.0",
    "mkdocs-git-revision-date-localized-plugin>=1.5.1",
    "mkdocs-material>=9.5.0",
    "mkdocs-with-pdf>=0.9.3",
    "mkdocstrings[python]>=0.27.0",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-testmon>=2.2.0",
    "pytest-xdist>=3.8.0",
    "weasyprint>=68.0",
]

[tool.pytest.ini_options]
addopts = "--testmon"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
