[project]
name = "autoware-carla-scenario"
version = "0.1.0"
description = "CARLA scenario testing framework for Autoware"
authors = [
    { name = "Masaya Kataoka", email = "ms.kataoka@gmail.com" }
]
requires-python = ">=3.10,<3.11"
dependencies = [
    "carla>=0.10.0",
    "pyxodr>=0.1.0",
    "opencv-python>=4.8",
    "numpy>=1.21",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.2",
    "lanelet2>=1.2.2",
    "lanelet2-python-api-for-autoware",
    "tqdm>=4.67.1",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.uv-build]
packages = [
    "src/autoware_carla_scenario",
    "src/hydra_plugins",
]

[project.scripts]
scenario = "autoware_carla_scenario.examples.run:main"
detect-no-3d-model = "autoware_carla_scenario.tools.detect_no_3d_model_lanelets:main"
