[project]
name = "autoware-lanelet2-to-opendrive"
version = "2.49.7"
description = "Convert Lanelet2 map format to OpenDRIVE format for Autoware"
readme = "README.md"
authors = [
    { name = "Masaya Kataoka", email = "ms.kataoka@gmail.com" }
]
requires-python = ">=3.10,<3.11"
dependencies = [
    "lanelet2>=1.2.2",
    "lanelet2-python-api-for-autoware",
    "scipy>=1.9.0",
    "lxml>=5.2.2",
    "mgrs>=1.5.0",
    "tqdm>=4.67.1",
    "pyyaml>=6.0.0",
    "hydra-core>=1.3.2",
    "asam-qc-opendrive>=1.0.0",
    "carla>=0.10.0",
    "pyxodr>=0.1.3",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
convert = "autoware_lanelet2_to_opendrive.main:main"
preprocess-lanelet = "autoware_lanelet2_to_opendrive.preprocess_lanelet:main"
analyze = "autoware_lanelet2_to_opendrive.analyze_xodr:main"
carla-import-test = "autoware_lanelet2_to_opendrive.carla_import_test:main"
