[project]
name = "autoware-lanelet2-to-opendrive"
version = "2.59.0"
description = "Convert Lanelet2 map format to OpenDRIVE format for Autoware"
readme = "README.md"
authors = [
    { name = "Masaya Kataoka", email = "ms.kataoka@gmail.com" }
]
requires-python = ">=3.10,<3.11"
dependencies = [
    # The lanelet2 Python package is provided by lanelet2-python-api-for-autoware,
    # which builds it from source against the system libboost-python. Pulling
    # lanelet2 from PyPI in addition introduces an auditwheel-bundled Boost 1.81
    # that conflicts ABI-wise with the system Boost 1.74 used by the autoware
    # extension wheels, and the install-order race that decides which lanelet2
    # wins is what surfaces as a SystemError on import (refs #449).
    "lanelet2-python-api-for-autoware",
    "scipy>=1.9.0",
    "lxml>=5.2.2",
    "mgrs>=1.5.0",
    "tqdm>=4.67.1",
    "pyyaml>=6.0.0",
    "hydra-core>=1.3.2",
    "asam-qc-opendrive>=1.0.0",
    "pyxodr>=0.1.3",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
convert = "autoware_lanelet2_to_opendrive.main:main"
preprocess-lanelet = "autoware_lanelet2_to_opendrive.preprocess_lanelet:main"
analyze = "autoware_lanelet2_to_opendrive.analyze_xodr:main"
qc-validate = "autoware_lanelet2_to_opendrive.qc_validate:main"
carla-import-test = "autoware_lanelet2_to_opendrive.carla_import_test:main"
